--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   },
   "description": ""
 }
